--- a/app/views/embed/comments.html.erb
+++ b/app/views/embed/comments.html.erb
@@ -4,11 +4,13 @@
   <% elsif @reply_count >= 10 %>
     <%= link_to(I18n.t('embed.continue'), @second_post_url, class: 'button', target: '_blank') %>
   <% end %>
-  <span class='replies'><%= I18n.t('embed.replies', count: @reply_count) %></span>
 </header>
 
-<%- if @topic_view.posts.present? %>
-  <%- @topic_view.posts.each do |post| %>
+<h3>
+<%= gsub_emoji_to_unicode(@topic_view.page_title) %>
+</h3>
+<%- if @topic_view.topic.ordered_posts.present? %>
+  <%- @topic_view.topic.ordered_posts.each_with_index do |post, index| %>
     <article class='post<%- if post.trashed? %> deleted<% end %>' id='post-<%= post.id.to_s %>'>
       <%= link_to embed_post_date(post.created_at), post.full_url, title: post.created_at.strftime("%B %e, %Y %l:%M%P"), class: 'post-date', target: "_blank" %>
       <%- if post.reply_to_post.present? && !post.cooked.index('aside') %>
@@ -36,17 +38,11 @@
         <%- end %>
       </div>
     </article>
+    <% if index == 0 %>
+      <span class='replies'><%= I18n.t('embed.replies', count: @reply_count) %></span>
+    <% end %>
   <%- end %>
 
-  <% if @topic_view.topic.posts_count > 0 %>
-    <footer class="clearfix">
-      <%= link_to(image_tag(SiteSetting.site_logo_url, class: 'logo'), Discourse.base_url, target: '_blank') %>
-      <%= link_to(I18n.t('embed.continue'), @topic_view.posts.last.full_url, class: 'button', target: '_blank') %>
-      <%- if @posts_left > 0 %>
-        <span class='replies'><%= I18n.t('embed.more_replies', count: @posts_left) %></span>
-      <%- end %>
-    </footer>
-    <div class="clearfix"></div>
-  <% end %>
+  <%= link_to('Ver discussão no Fórum', @topic_view.topic.url, class: 'button', target: '_blank') %>
 
 <% end %>
